--- a/src/BusinessListing.css
+++ b/src/BusinessListing.css
@@ -1,3 +1,12 @@
+.barbie-pfp {
+    width: 60px;
+    height: auto;
+    margin-left: 275px
+}
+
+.search-bar {
+    display: flex;
+}
 .circle-categories {
     display: flex;
     justify-content: center; /* Center items horizontally */
@@ -71,7 +80,7 @@
     left: 50%;
 }
 
-.search-bar img {
+.search-bar-img {
     width: 400px; /* Decrease the width of the image by 50% */
     margin-left: -200px;
 }
@@ -89,6 +98,29 @@
     opacity: 0;
 }
 
+/* Add initial border style */
+.circle-categories .circle-1,
+.circle-categories .circle-2,
+.circle-categories .circle-3,
+.circle-categories .circle-4,
+.circle-categories .circle-5,
+.circle-categories .circle-6 {
+    border: 2px solid transparent; /* Initial border style */
+    transition: border-width 0.3s, border-color 0.3s; /* Add transition effect for both border width and color */
+}
 
-  
+/* Add this CSS to create the hover effect */
+.circle-categories .circle-1:hover,
+.circle-categories .circle-2:hover,
+.circle-categories .circle-3:hover,
+.circle-categories .circle-4:hover,
+.circle-categories .circle-5:hover,
+.circle-categories .circle-6:hover {
+    border: 4px solid #BD2B60; /* Increase border width on hover */
+    transition: border-width 0.3s; /* Add transition effect */
+}
 
+.barbie-pfp{
+    border: none;
+    border: 0;
+}
